/*
 * Copyright (c) Two Sigma Open Source, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.twosigma.waiter.courier";
option java_outer_classname = "CourierProto";
option objc_class_prefix = "TSCP";

package courier;

// The greeting service definition.
service Courier {
    // Sends a package.
    rpc SendPackage (CourierRequest) returns (CourierReply);
    // Processes a stream of messages
    rpc CollectPackages (stream CourierRequest) returns (stream CourierSummary);
}

// The request message containing the package's name.
message CourierRequest {
    string id = 1;
    string from = 2;
    string message = 3;
}

// The response message containing the package response.
message CourierReply {
    string id = 1;
    string message = 2;
    string response = 3;
}

// The response message containing the package response.
message CourierSummary {
    int64 num_messages = 1;
    int64 total_length = 2;
}
